hphp/hack/test/typecheck/idx3_3.php.exp
File "idx3_3.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_3.php", line 7, characters 15-17:
Expected int
File "idx3_3.php", line 9, characters 21-26:
But got string
